operator/pkg/gateway-api/testdata/gateway/gateway-same-port-https-and-tls-passthrough-with-second-https-port/input/same-port-https-and-tls-passthrough-with-second-https-port.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-port-https-and-tls-passthrough-with-second-https-port
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: https-443
      protocol: HTTPS
      port: 443
      hostname: "web.example.test"
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: multi-port-https-tls
            namespace: gateway-conformance-infra
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-8443
      protocol: HTTPS
      port: 8443
      hostname: "api.example.test"
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: multi-port-https-tls
            namespace: gateway-conformance-infra
      allowedRoutes:
        namespaces:
          from: Same
    - name: tls-443
      protocol: TLS
      port: 443
      hostname: "a.example.test"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-port-https-and-tls-passthrough-with-second-https-port
      sectionName: https-443
  hostnames:
    - web.example.test
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-port-https-and-tls-passthrough-with-second-https-port
      sectionName: https-8443
  hostnames:
    - api.example.test
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tls-route-a
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-port-https-and-tls-passthrough-with-second-https-port
      namespace: gateway-conformance-infra
      sectionName: tls-443
  hostnames:
    - a.example.test
  rules:
    - backendRefs:
        - name: tls-backend
          port: 443
---
apiVersion: v1
kind: Secret
metadata:
  name: multi-port-https-tls
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVORENDQXB5Z0F3SUJBZ0lSQUtEL0JMRkJmd0tJWjBXR3JIdFRINmd3RFFZSktvWklodmNOQVFFTEJRQXcKZHpFZU1Cd0dBMVVFQ2hNVmJXdGpaWEowSUdSbGRtVnNiM0J0Wlc1MElFTkJNU1l3SkFZRFZRUUxEQjEwWVcxdApZV05vUUdabFpHOXlZUzVzWVc0Z0tGUmhiU0JOWVdOb0tURXRNQ3NHQTFVRUF3d2tiV3RqWlhKMElIUmhiVzFoClkyaEFabVZrYjNKaExteGhiaUFvVkdGdElFMWhZMmdwTUI0WERUSXpNREl5TVRFeE1EZzBNMW9YRFRJMU1EVXkKTVRFeU1EZzBNMW93VVRFbk1DVUdBMVVFQ2hNZWJXdGpaWEowSUdSbGRtVnNiM0J0Wlc1MElHTmxjblJwWm1sagpZWFJsTVNZd0pBWURWU [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRRENHY3Z0Q1VWWTZxVm8KSHF0blQvdGFKWWp1QUFuR1p6SU9MVXFqMnBZUTBDK2pIK3ZCMkMzNHM4aVNLVWN6Q2ZkT2EySGRBSEpsNXJ2NApOQktQTXBCOFJROCtVN0hqN05sMEo0UEREZUdzN0VacHRaZUgrK0tMMnNFTTBIRy9OdGtEOVFrdWlDMmQxYmNEClkwWWRwd01MWVdBVEtBcEo0QXhua1BCcGRMWXh5eFp3WFUzVXNFRVpoTm83UXdYQUlNaEJxYXZ1a1htTGZ2K08KNXpaKzNRbjdiRmFvUkFXSy9WeDk0clhueDVyRzM0KzgxaFc2YlhaS082dlpUQjhKd1hmdElYZU5ESmlTRnpHYQp6aGhoV1kyc0NRd2Frc [...]
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-same-port-https-and-tls-passthrough-w-bc7tk66g54
  namespace: gateway-conformance-infra
spec:
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.18.255.200
        ipMode: VIP
